# ex-ethclient

./: .credo.exs  .dockerignore  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Dockerfile  README.md  mix.exs
.claude/: settings.json
.claude/agents/: ethereum-researcher.md  nif-developer.md  test-analyzer.md
.claude/rules/: elixir.md  rust-nif.md  testing.md
.claude/skills/diff-test/: SKILL.md
.claude/skills/eip/: SKILL.md
.claude/skills/eth-test/: SKILL.md
.claude/skills/nif-scaffold/: SKILL.md
.claude/skills/phase-status/: SKILL.md
.github/workflows/: ci.yml  docs.yml
apps/eth_chain/: .gitignore  README.md  mix.exs
apps/eth_chain/lib/: eth_chain.ex
apps/eth_core/: .gitignore  README.md  mix.exs
apps/eth_core/lib/: eth_core.ex
apps/eth_core/test/: eth_core_test.exs
apps/eth_crypto/: .gitignore  README.md  mix.exs
apps/eth_crypto/lib/: eth_crypto.ex
apps/eth_crypto/test/: eth_crypto_test.exs
apps/eth_dashboard/: mix.exs
apps/eth_net/: .gitignore  README.md  mix.exs
apps/eth_rpc/: .gitignore  README.md  mix.exs
apps/eth_storage/: .gitignore  README.md  mix.exs
apps/eth_vm/: mix.exs
apps/eth_vm/native/ethvm_native/: Cargo.toml
apps/eth_vm/native/ethvm_native/src/: lib.rs  state.rs
config/: config.exs  dev.exs  runtime.exs  test.exs
data/: jwt.hex
data/storage/: canonical_hashes.dets  chain_config.dets  headers.dets
data_sepolia/: jwt.hex
docs/reference/: architecture.md  ethereum-specs.md  nif-patterns.md  phase-roadmap.md  testing-strategy.md
hive/: Dockerfile  README.md  entrypoint.sh  hive.yaml
(+283 files in other folders)
