[package]
name = "ethvm_native"
version = "0.2.0"
edition = "2021"

[lib]
name = "ethvm_native"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36"
revm = { version = "22", default-features = false, features = [
    "std",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_eip3607",
    "secp256k1",
] }
